--- a/configs/default/config.json
+++ b/configs/default/config.json
@@ -1,10 +1,10 @@
 {
-  "seed": 42,
+  "seed": 0,
   "results_folder": "results",
   "num_workers": 8,
   "dataset": {
     "dset_path": "./dset/Sleep-EDF-2018/npz/Fpz-Cz",
-    "max_files": 10
+    "max_files": 200
   },
   "pretraining_params": {
     "batch_size": 1024,
@@ -12,16 +12,16 @@
     "dropout_rate": 0.2,
     "latent_dim": 128,
     "learning_rate": 0.001,
-    "max_epochs": 10,
-    "check_interval": 3,
-    "min_improvement": 0.01,
+    "max_epochs": 1500,
+    "check_interval": 50,
+    "min_improvement": 0.005,
     "best_model_pth": "checkpoints/encoder/encoder_"
   },
   "latent_space_params": {
     "umap_enabled": false,
     "pca_enabled": false,
     "tsne_enabled": true,
-    "visualize": true,
+    "visualize": false,
     "compute_metrics": false,
     "n_clusters": 5,
     "output_image_dir": "latent_space/visualizations",
@@ -30,16 +30,18 @@
   },
   "sup_training_params": {
     "learning_rate": 0.001,
-    "max_epochs": 10,
+    "max_epochs": 500,
     "dropout_rate": 0.5,
-    "check_interval": 2,
+    "check_interval": 25,
     "min_improvement": 0.005,
     "best_model_pth": "checkpoints/full_model/"
   },
-  "experiment_num": 1110,
+  "experiment_num": 1111,
   "augmentations": {
-    "TimeWarping": {
-      "p": 1.0
-    }
+    "TailoredMixup": { "p": 0.6 },
+    "TimeWarping": { "p": 0.6 },
+    "Permutation": { "p": 0.6 },
+    "RandomZeroMasking": { "p": 0.6 },
+    "CutoutResize": { "p": 0.6 }
   }
 }
